# Foodhub_analysis

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
Foodhub/: Foodhub.ipynb
dashboard/: app.py
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md
notebooks/: 00_data_overview.ipynb  01_univariate_eda.ipynb  02_bivariate_eda.ipynb  03_statistical_tests.ipynb  04_customer_segments.ipynb  05_predictive_modeling.ipynb  06_final_report.ipynb
scripts/: create_notebooks.py
src/analysis/: segments.py  stats.py
src/data/: load.py
src/features/: build.py
src/models/: predict.py
src/visualization/: plots.py
tests/: conftest.py  test_data_load.py  test_features.py  test_models.py  test_plots.py  test_segments.py  test_stats.py
